--- a/app/src/main/res/layout/activity_mother_3_left_nav_item.xml
+++ b/app/src/main/res/layout/activity_mother_3_left_nav_item.xml
@@ -1,4 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--
+    Browser Tab Item Layout
+    Displays a single browser tab with favicon, title, URL, and close button
+    Used in a list/dialog for tab management
+    Root layout is RelativeLayout for flexible positioning of elements
+-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -6,6 +11,11 @@
     android:orientation="vertical"
     tools:ignore="UseAppTint">
 
+    <!--
+        Main tab info container - clickable area showing website info
+        Has pressed state selector for visual feedback
+        Positioned to leave space for close button on the right
+    -->
     <RelativeLayout
         android:id="@+id/browser_tab_info"
         android:layout_width="match_parent"
@@ -15,14 +25,19 @@
         android:layout_marginTop="@dimen/_5"
         android:layout_marginEnd="@dimen/_10"
         android:layout_marginBottom="@dimen/_5"
-        android:layout_toStartOf="@+id/browser_tab_close_button"
+        android:layout_toStartOf="@+id/btn_browser_tab_close"
         android:background="@drawable/ic_button_selector_background"
         android:clickable="true"
         android:elevation="@dimen/_1"
         tools:ignore="TouchTargetSizeCheck">
 
+        <!--
+            Tab Favicon/Website Icon
+            Fixed size image view that displays the site icon
+            Uses centerCrop to properly scale the icon
+        -->
         <ImageView
-            android:id="@+id/browser_tab_favicon"
+            android:id="@+id/btn_tab_favicon"
             android:layout_width="@dimen/_25"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -34,6 +49,11 @@
             android:src="@drawable/ic_button_information"
             android:visibility="visible" />
 
+        <!--
+            Text container for tab title and URL
+            Vertical LinearLayout organizes the two text fields
+            Positioned to the right of the favicon
+        -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -42,9 +62,15 @@
             android:layout_marginTop="@dimen/_5"
             android:layout_marginEnd="@dimen/_10"
             android:layout_marginBottom="@dimen/_5"
-            android:layout_toEndOf="@+id/browser_tab_favicon"
+            android:layout_toEndOf="@+id/btn_tab_favicon"
             android:orientation="vertical">
 
+            <!--
+                Tab Title (Website Title)
+                Bold text in primary color
+                Single line with ellipsis for overflow
+                Uses application font family
+            -->
             <TextView
                 android:id="@+id/browser_tab_title"
                 android:layout_width="match_parent"
@@ -58,6 +84,12 @@
                 android:textSize="@dimen/message_text_size"
                 android:textStyle="bold" />
 
+            <!--
+                Tab URL (Website Address)
+                Smaller text in hint color
+                Single line with ellipsis for overflow
+                Uses same font family as title
+            -->
             <TextView
                 android:id="@+id/browser_tab_url"
                 android:layout_width="match_parent"
@@ -75,8 +107,15 @@
         </LinearLayout>
     </RelativeLayout>
 
+    <!--
+        Close Tab Button
+        Circular/X-shaped button to close this tab
+        Has pressed state selector for visual feedback
+        Fixed height with tinted icon
+        Positioned at the end of the item
+    -->
     <ImageView
-        android:id="@+id/browser_tab_close_button"
+        android:id="@+id/btn_browser_tab_close"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/_35"
         android:layout_alignParentEnd="true"
