--- a/app/src/main/res/layout/dialog_browser_homepage_1.xml
+++ b/app/src/main/res/layout/dialog_browser_homepage_1.xml
@@ -1,4 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--
+    Homepage Configuration Dialog
+    ============================
+    Allows users to view and modify the browser's homepage URL
+    Features:
+    - Current homepage display (read-only)
+    - URL input field
+    - Apply changes button
+    - Restart notification
+-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,6 +16,12 @@
     android:layout_height="wrap_content"
     tools:ignore="UseAppTint,UseCompatTextViewDrawableXml">
 
+    <!--
+        Root Card Container
+        - Elevated card with rounded corners
+        - Background matches app theme
+        - Margins for visual separation
+    -->
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,13 +33,21 @@
         app:cardCornerRadius="@dimen/_10"
         app:cardElevation="@dimen/_5">
 
+        <!-- Main content container - vertical layout -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!--
+                Current Homepage Display
+                - Shows the existing homepage URL
+                - Single line with ellipsis
+                - Text is selectable (long-press to copy)
+                - Auto-links any URLs in the text
+            -->
             <TextView
-                android:id="@+id/text_current_homepage"
+                android:id="@+id/txt_current_homepage"
                 style="@style/style_dialog.message"
                 android:layout_marginStart="@dimen/_15"
                 android:layout_marginTop="@dimen/_15"
@@ -32,13 +55,19 @@
                 android:layout_marginBottom="@dimen/_15"
                 android:autoLink="web"
                 android:ellipsize="end"
+                android:fontFamily="@font/application_font_family"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:fontFamily="@font/application_font_family"
                 android:text="@string/title_message_goes_here"
                 android:textIsSelectable="true"
                 android:textSize="@dimen/message_text_size" />
 
+            <!--
+                Divider Line
+                - Separates current URL from input field
+                - Semi-transparent dark line
+                - Horizontal margins for inset look
+            -->
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_2"
@@ -47,6 +76,12 @@
                 android:layout_marginBottom="@dimen/_5"
                 android:background="@color/transparent_dark" />
 
+            <!--
+                URL Input Container
+                - Rounded background for the EditText
+                - Contains the URL input field
+                - Margins for proper spacing
+            -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -57,6 +92,14 @@
                 android:background="@drawable/rounded_surface_color"
                 android:orientation="vertical">
 
+                <!--
+                    URL Input Field
+                    - Text URI input type (optimized for URLs)
+                    - Single line input
+                    - Hint text when empty
+                    - Transparent background (shows container's rounded bg)
+                    - Disabled autofill (security for URLs)
+                -->
                 <EditText
                     android:id="@+id/edit_field_url"
                     style="@style/style_dialog.message"
@@ -73,9 +116,15 @@
                     android:textSize="@dimen/normal_text_size"
                     android:textStyle="normal"
                     tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
-
             </LinearLayout>
 
+            <!--
+                Apply Changes Button
+                - Primary action button
+                - Secondary color scheme
+                - Settings icon with text
+                - Elevated for prominence
+            -->
             <RelativeLayout
                 android:id="@+id/btn_dialog_positive_container"
                 android:layout_width="match_parent"
@@ -106,6 +155,13 @@
                     android:textStyle="bold" />
             </RelativeLayout>
 
+            <!--
+                Restart Notification
+                - Informational text about needing restart
+                - Centered below the button
+                - Secondary text color (less prominent)
+                - Small text size
+            -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -118,7 +174,6 @@
                 android:text="@string/text_app_need_restart_to_take_effect"
                 android:textColor="@color/color_text_secondary"
                 android:textSize="@dimen/small_text_size" />
-
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
