--- a/app/src/main/res/layout/activity_bookmarks_1_option_1.xml
+++ b/app/src/main/res/layout/activity_bookmarks_1_option_1.xml
@@ -1,4 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+BOOKMARK ACTIONS DIALOG LAYOUT
+A popup dialog showing available actions for a bookmark
+Structure:
+1. Root dialog container with card style
+2. Vertical list of action buttons:
+   - Open in browser
+   - Share bookmark
+   - Copy bookmark link
+   - Delete bookmark
+-->
+
+<!-- Root dialog container using dialog style from styles.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,6 +20,14 @@
     android:layout_height="wrap_content"
     tools:ignore="UseAppTint,UseCompatTextViewDrawableXml">
 
+    <!--
+    MAIN DIALOG CARD
+    Container for all action buttons with:
+    - Background color matching app theme
+    - Rounded corners (10dp radius)
+    - Slight elevation for depth
+    - Standard margins (5dp sides, 10dp top/bottom)
+    -->
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,11 +39,20 @@
         app:cardCornerRadius="@dimen/_10"
         app:cardElevation="@dimen/_2">
 
+        <!-- Vertical container for action buttons -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!--
+            OPEN IN BROWSER BUTTON
+            First/top action button with:
+            - Open icon (tinted secondary color)
+            - Negative selector background (press effect)
+            - Standard text styling
+            - 10dp start margin, 15dp end margin
+            -->
             <LinearLayout
                 android:id="@+id/btn_open_bookmark"
                 android:layout_width="match_parent"
@@ -49,6 +79,13 @@
                     android:textSize="@dimen/normal_text_size" />
             </LinearLayout>
 
+            <!--
+            SHARE BOOKMARK BUTTON
+            Second action button with:
+            - Share icon (tinted secondary color)
+            - Same styling as open button
+            - No top/bottom margin between buttons
+            -->
             <LinearLayout
                 android:id="@+id/button_share_bookmark"
                 android:layout_width="match_parent"
@@ -75,6 +112,12 @@
                     android:textSize="@dimen/normal_text_size" />
             </LinearLayout>
 
+            <!--
+            COPY BOOKMARK BUTTON
+            Third action button with:
+            - Clipboard icon (tinted secondary color)
+            - Same styling as other buttons
+            -->
             <LinearLayout
                 android:id="@+id/button_copy_bookmark"
                 android:layout_width="match_parent"
@@ -101,6 +144,13 @@
                     android:textSize="@dimen/normal_text_size" />
             </LinearLayout>
 
+            <!--
+            DELETE BOOKMARK BUTTON
+            Fourth/bottom action button with:
+            - Delete icon (tinted secondary color)
+            - Same styling but with bottom margin (10dp)
+            - Typically appears visually distinct (red in many apps)
+            -->
             <LinearLayout
                 android:id="@+id/button_delete_bookmark"
                 android:layout_width="match_parent"
