--- a/app/src/main/res/layout/activity_browser_history_1.xml
+++ b/app/src/main/res/layout/activity_browser_history_1.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+BROWSER HISTORY ACTIVITY LAYOUT
+Displays user's browsing history with:
+1. Action bar with title and clear button
+2. Empty state indicator when no history exists
+3. ListView for history items
+4. Load more button at bottom
+-->
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,6 +18,14 @@
     tools:context="app.ui.main.fragments.browser.activities.BookmarksActivity"
     tools:ignore="UseCompatTextViewDrawableXml,UseAppTint,VisualLintBounds">
 
+    <!--
+    TOP ACTION BAR SECTION
+    Contains back button, title, and clear history button
+    Features:
+    - Fixed height of 50dp
+    - Rounded corners (10dp radius)
+    - Standard margins (15dp sides, 10dp top)
+    -->
     <androidx.cardview.widget.CardView
         android:id="@+id/top_layout_actionbar_section"
         android:layout_width="match_parent"
@@ -26,6 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <!-- Back button (left side) -->
             <RelativeLayout
                 android:id="@+id/btn_left_actionbar"
                 android:layout_width="@dimen/_50"
@@ -34,6 +52,7 @@
                 android:clickable="true"
                 tools:ignore="SpeakableTextPresentCheck">
 
+                <!-- Back arrow icon -->
                 <ImageView
                     android:id="@+id/btn_left_actionbar_img"
                     android:layout_width="@dimen/_30"
@@ -46,6 +65,7 @@
                     tools:ignore="ImageContrastCheck" />
             </RelativeLayout>
 
+            <!-- Center title -->
             <TextView
                 android:id="@+id/title_actionbar"
                 android:layout_width="match_parent"
@@ -64,6 +84,7 @@
                 android:textSize="@dimen/title_text_size"
                 android:textStyle="bold" />
 
+            <!-- Clear history button (right side) -->
             <RelativeLayout
                 android:id="@+id/btn_right_actionbar"
                 android:layout_width="@dimen/_50"
@@ -73,6 +94,7 @@
                 android:clickable="true"
                 tools:ignore="SpeakableTextPresentCheck">
 
+                <!-- Clear (X) icon -->
                 <ImageView
                     android:id="@+id/btn_right_actionbar_img"
                     android:layout_width="@dimen/_30"
@@ -84,10 +106,18 @@
                     android:tint="@color/color_secondary"
                     tools:ignore="ImageContrastCheck" />
             </RelativeLayout>
-
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
+    <!--
+    EMPTY STATE INDICATOR
+    Shown when no browsing history exists
+    Features:
+    - Centered in parent
+    - Empty box illustration
+    - Informational text
+    - Rounded corners (10dp radius)
+    -->
     <androidx.cardview.widget.CardView
         android:id="@+id/empty_history_indicator"
         android:layout_width="match_parent"
@@ -108,6 +138,7 @@
             android:orientation="vertical"
             tools:ignore="UseCompoundDrawables">
 
+            <!-- Empty box illustration -->
             <ImageView
                 android:id="@+id/img_empty_box"
                 android:layout_width="wrap_content"
@@ -119,6 +150,7 @@
                 android:importantForAccessibility="no"
                 android:src="@drawable/image_empty_box" />
 
+            <!-- Empty state message -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -132,10 +164,17 @@
                 android:text="@string/text_your_browsing_history_empty"
                 android:textColor="@color/color_text_primary"
                 android:textSize="@dimen/message_text_size" />
-
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
+    <!--
+    HISTORY LIST VIEW
+    Primary content area showing browsing history
+    Features:
+    - Takes remaining space between action bar and bottom section
+    - 8dp margins top/bottom
+    - Transparent divider between items
+    -->
     <ListView
         android:id="@+id/list_history"
         android:layout_width="match_parent"
@@ -149,6 +188,15 @@
         android:divider="@color/transparent"
         android:visibility="visible" />
 
+    <!--
+    BOTTOM SECTION
+    Contains the "Load More" action button
+    Features:
+    - Fixed to bottom of screen
+    - Secondary colored button with plus icon
+    - Standard margins (15dp horizontal, 10dp bottom)
+    - Elevation for depth
+    -->
     <LinearLayout
         android:id="@+id/bottom_section"
         android:layout_width="match_parent"
@@ -156,6 +204,7 @@
         android:layout_alignParentBottom="true"
         android:orientation="vertical">
 
+        <!-- Load More button -->
         <RelativeLayout
             android:id="@+id/btn_load_more_history"
             android:layout_width="match_parent"
@@ -169,6 +218,7 @@
             android:elevation="@dimen/_2"
             tools:ignore="UselessParent,TouchTargetSizeCheck">
 
+            <!-- Button label with plus icon -->
             <TextView
                 android:id="@+id/btn_dialog_positive"
                 android:layout_width="wrap_content"
@@ -186,5 +236,4 @@
                 android:textStyle="bold" />
         </RelativeLayout>
     </LinearLayout>
-
 </RelativeLayout>
