--- a/app/src/main/res/layout/activity_player_5_options.xml
+++ b/app/src/main/res/layout/activity_player_5_options.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+    Media Options Dialog Layout
+    Displays a card-based menu of actions for media files
+    Includes options like delete, convert, open with, etc.
+    Uses a dialog style with rounded corners and elevation
+-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,6 +13,12 @@
     android:layout_height="wrap_content"
     tools:ignore="UseAppTint,UseCompatTextViewDrawableXml">
 
+    <!--
+        Main Card Container
+        - Elevated card with rounded corners (10dp)
+        - Background color matching app theme
+        - Small margins on all sides
+    -->
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,11 +30,17 @@
         app:cardCornerRadius="@dimen/_10"
         app:cardElevation="@dimen/_2">
 
+        <!-- Vertical layout for menu options -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!--
+                Hidden Title Bar (35dp height)
+                - Currently hidden (visibility="gone")
+                - Would display "Media Options" title if shown
+            -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_35"
@@ -31,7 +49,8 @@
                 android:layout_marginEnd="@dimen/_0"
                 android:layout_marginBottom="@dimen/_0"
                 android:background="@color/color_surface"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <TextView
                     style="@style/style_dialog.title"
@@ -41,11 +60,16 @@
                     android:textColor="@color/color_text_primary"
                     android:textSize="@dimen/normal_text_size"
                     android:textStyle="bold" />
-
             </LinearLayout>
 
+            <!--
+                Delete File Option
+                - First menu item with delete icon
+                - Press state selector for visual feedback
+                - Icon and text with consistent styling
+            -->
             <LinearLayout
-                android:id="@+id/button_delete_file"
+                android:id="@+id/btn_delete_file"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/_10"
@@ -54,7 +78,8 @@
                 android:layout_marginBottom="@dimen/_0"
                 android:background="@drawable/ic_button_negative_selector"
                 android:clickable="true"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                tools:ignore="TouchTargetSizeCheck">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -69,8 +94,14 @@
                     android:textSize="@dimen/normal_text_size" />
             </LinearLayout>
 
+            <!--
+                Convert to Audio Option
+                - Second menu item with sound icon
+                - Same styling as other options
+                - 8dp internal margin for touch area
+            -->
             <LinearLayout
-                android:id="@+id/button_convert_to_audio"
+                android:id="@+id/btn_convert_to_audio"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/_10"
@@ -79,7 +110,8 @@
                 android:layout_marginBottom="@dimen/_0"
                 android:background="@drawable/ic_button_negative_selector"
                 android:clickable="true"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                tools:ignore="TouchTargetSizeCheck">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -94,8 +126,14 @@
                     android:textSize="@dimen/normal_text_size" />
             </LinearLayout>
 
+            <!--
+                Open In Another App Option
+                - Third menu item with open icon
+                - Secondary color for icon tint
+                - Consistent text styling
+            -->
             <LinearLayout
-                android:id="@+id/button_open_in_another"
+                android:id="@+id/btn_open_in_another"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/_10"
@@ -104,7 +142,8 @@
                 android:layout_marginBottom="@dimen/_0"
                 android:background="@drawable/ic_button_negative_selector"
                 android:clickable="true"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                tools:ignore="TouchTargetSizeCheck">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -119,8 +158,14 @@
                     android:textSize="@dimen/normal_text_size" />
             </LinearLayout>
 
+            <!--
+                Media Information Option
+                - Fourth menu item with info icon
+                - Bottom margin of 8dp
+                - Standard option styling
+            -->
             <LinearLayout
-                android:id="@+id/button_media_info"
+                android:id="@+id/btn_media_info"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/_10"
@@ -129,7 +174,8 @@
                 android:layout_marginBottom="@dimen/_8"
                 android:background="@drawable/ic_button_negative_selector"
                 android:clickable="true"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                tools:ignore="TouchTargetSizeCheck">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -144,8 +190,13 @@
                     android:textSize="@dimen/normal_text_size" />
             </LinearLayout>
 
+            <!--
+                Discover More Videos Option (Hidden)
+                - Currently not visible (visibility="gone")
+                - Would show discovery-related content if enabled
+            -->
             <LinearLayout
-                android:id="@+id/button_discover_video"
+                android:id="@+id/btn_discover_video"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/_10"
