--- a/app/src/main/res/layout/dialog_default_location_1.xml
+++ b/app/src/main/res/layout/dialog_default_location_1.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+    Download Location Selection Dialog
+    =================================
+    Allows users to choose where downloaded files are saved:
+    - Private app folder (hidden from system gallery)
+    - Public system gallery folder (visible to other apps)
+    Features radio-style selection with visual feedback
+-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,6 +15,12 @@
     android:layout_height="wrap_content"
     tools:ignore="UseAppTint,UseCompatTextViewDrawableXml">
 
+    <!--
+        Root Card Container
+        - Elevated card with rounded corners (10dp)
+        - Background matches app theme
+        - Margins for visual separation from screen edges
+    -->
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,11 +32,19 @@
         app:cardCornerRadius="@dimen/_10"
         app:cardElevation="@dimen/_5">
 
+        <!-- Main content container - vertical layout -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!--
+                Title Section
+                - Surface color background
+                - Centered bold text
+                - Single line with ellipsis if needed
+                - 10dp padding on all sides
+            -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -42,9 +64,14 @@
                     android:textColor="@color/color_text_primary"
                     android:textSize="@dimen/normal_text_size"
                     android:textStyle="bold" />
-
             </LinearLayout>
 
+            <!--
+                Location Options Radio Group
+                - Vertical layout for option buttons
+                - 15dp horizontal margins
+                - 10dp top / 5dp bottom margins
+            -->
             <LinearLayout
                 android:id="@+id/radio_group"
                 android:layout_width="match_parent"
@@ -55,6 +82,12 @@
                 android:layout_marginBottom="@dimen/_5"
                 android:orientation="vertical">
 
+                <!--
+                    Private Folder Option (Default Selected)
+                    - Checked radio button (filled circle)
+                    - Press state selector background
+                    - Two-line description
+                -->
                 <LinearLayout
                     android:id="@+id/button_app_private_folder"
                     android:layout_width="match_parent"
@@ -67,8 +100,9 @@
                     android:clickable="true"
                     android:orientation="horizontal">
 
+                    <!-- Radio button indicator (checked state) -->
                     <ImageView
-                        android:id="@+id/button_app_private_folder_radio"
+                        android:id="@+id/btn_app_private_folder_radio"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_gravity="center_vertical"
@@ -79,6 +113,7 @@
                         android:tint="@color/color_secondary"
                         tools:ignore="ImageContrastCheck" />
 
+                    <!-- Option description container -->
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -89,6 +124,7 @@
                         android:layout_weight="1"
                         android:orientation="vertical">
 
+                        <!-- Primary option text -->
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -97,6 +133,7 @@
                             android:textColor="@color/color_text_primary"
                             android:textSize="@dimen/normal_text_size" />
 
+                        <!-- Secondary description text -->
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -108,12 +145,18 @@
                             android:text="@string/text_not_visible_in_system_gallery"
                             android:textColor="@color/color_text_secondary"
                             android:textSize="@dimen/small_text_size" />
-
                     </LinearLayout>
                 </LinearLayout>
 
+                <!--
+                    System Gallery Option
+                    - Unchecked radio button (empty circle)
+                    - Press state selector background
+                    - Two-line description
+                    - 5dp top margin from previous option
+                -->
                 <LinearLayout
-                    android:id="@+id/button_system_gallery"
+                    android:id="@+id/btn_system_gallery"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_0"
@@ -124,6 +167,7 @@
                     android:clickable="true"
                     android:orientation="horizontal">
 
+                    <!-- Radio button indicator (unchecked state) -->
                     <ImageView
                         android:id="@+id/button_system_gallery_radio"
                         android:layout_width="wrap_content"
@@ -136,6 +180,7 @@
                         android:tint="@color/color_secondary"
                         tools:ignore="ImageContrastCheck" />
 
+                    <!-- Option description container -->
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -146,6 +191,7 @@
                         android:layout_weight="1"
                         android:orientation="vertical">
 
+                        <!-- Primary option text -->
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -154,6 +200,7 @@
                             android:textColor="@color/color_text_primary"
                             android:textSize="@dimen/normal_text_size" />
 
+                        <!-- Secondary description text -->
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -165,11 +212,18 @@
                             android:text="@string/text_visible_in_system_gallery"
                             android:textColor="@color/color_text_secondary"
                             android:textSize="@dimen/small_text_size" />
-
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
 
+            <!--
+                Apply Changes Button
+                - Primary action button
+                - Secondary color scheme
+                - Settings icon with text
+                - Elevated for prominence
+                - 15dp horizontal margins
+            -->
             <RelativeLayout
                 android:id="@+id/btn_dialog_positive_container"
                 android:layout_width="match_parent"
@@ -200,6 +254,14 @@
                     android:textStyle="bold" />
             </RelativeLayout>
 
+            <!--
+                Changes Notification
+                - Informational text about when changes take effect
+                - Centered below the button
+                - Secondary text color (less prominent)
+                - Small text size
+                - 8dp bottom margin
+            -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -212,7 +274,6 @@
                 android:text="@string/text_changes_will_apply_on_next_download"
                 android:textColor="@color/color_text_secondary"
                 android:textSize="@dimen/small_text_size" />
-
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
