--- a/app/src/main/res/layout/frag_down_3_active_1_row_1.xml
+++ b/app/src/main/res/layout/frag_down_3_active_1_row_1.xml
@@ -62,13 +62,12 @@
                     android:layout_toStartOf="@id/img_status_indicator"
                     android:ellipsize="end"
                     android:fontFamily="@font/application_font_family"
-                    android:textStyle="bold"
                     android:gravity="center_vertical"
                     android:maxLines="2"
                     android:singleLine="false"
                     android:text="@string/text_sample_video_file_name"
                     android:textColor="@color/color_text_primary"
-                    android:textSize="@dimen/message_text_size" />
+                    android:textSize="@dimen/normal_text_size_small" />
 
                 <ImageView
                     android:id="@+id/img_status_indicator"
